update apc and shake html 2021 version

--- a/apc/index.html
+++ b/apc/index.html
@@ -60,12 +60,12 @@
 
     <!-- Favicons -->
 
-    <meta property="og:image" content="../static/img/2020_APC_배너.jpeg" />
-    <meta property="og:title" content="제 10회 아주대학교 프로그래밍 경시대회가 열립니다!" />
+    <meta property="og:image" content="../static/img/2021_APC_배너.jpeg" />
+    <meta property="og:title" content="제 11회 아주대학교 프로그래밍 경시대회가 열립니다!" />
     <meta property="og:url" content="/apc" />
-    <meta property="og:site_name" content="APC 2020" />
+    <meta property="og:site_name" content="APC 2021" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="2020년 12월 26일, 제10회 Ajou Programming Contest가 개최됩니다." />
+    <meta property="og:description" content="2021년 10월 30일, 제11회 Ajou Programming Contest가 개최됩니다." />
 
 </head>
 
@@ -88,9 +88,8 @@
                     <div class="col-md-7 menu-col text-right">
                         <div class="menu">
                             <ul class="list-inline">
-				<li><a href="https://www.acmicpc.net/contest/scoreboard/409">2019 Div.1 결과 보기</a>
-                                </li>
-				<li><a href="https://www.acmicpc.net/contest/scoreboard/410">2019 Div.2 결과 보기</a></li>
+                                <li><a href="https://www.acmicpc.net/contest/scoreboard/568">2020 Div.1 결과 보기</a></li>
+				                <li><a href="https://www.acmicpc.net/contest/scoreboard/567">2020 Div.2 결과 보기</a></li>
                             </ul>
                         </div>
                     </div>
@@ -109,28 +108,27 @@
                         <div class="element">
                             <div class="element">
 
-                                <h1>2020 아주대학교 프로그래밍 경시대회</h1>
-                                <h5>
-                                    <br>대회 참가 신청이 마감되었습니다.
-                                    <br>대회 유의사항과 계정 정보에 대한 메일이 모두 발송되었습니다. 확인부탁드립니다.
-                                    <br>관련 문의는 정세훈 010-9568-9590으로 부탁드립니다.
-                                </h5>
+                                <h1>2021 아주대학교 프로그래밍 경시대회</h1>
+                                <h4>
+                                    <br>대회 참가 신청 접수 중 입니다.
+                                    <br>관련 문의는 정의찬 (010-3386-5791)으로 부탁드립니다.
+                                </h4>
                                 <div class="space"></div>
                                 <div class="row">
                                     <div class="col-xs-6 animated fadeInRight">
                                         <div class="heading-line color-white big"></div>
                                         <h3><strong>대회 일시</strong></h3>
-                                        <h1 class="hidden-xs font-width:500">12월 26일 13:00</h1>
-                                        <h2 class="visible-xs font-width:500">12월 26일 13:00</h2>
+                                        <h1 class="hidden-xs font-width:500">10월 30일 14:00</h1>
+                                        <h2 class="visible-xs font-width:500">10월 30일 14:00</h2>
                                         <!-- <h1 class="lighter hidden-xs" style="text-align:center;">~ 19:00</h1> -->
                                         <!-- <h2 class="lighter visible-xs">2019.05.26 13:00</h2> -->
                                     </div>
                                     
                                     <div class="col-xs-6 animated fadeInRight">
                                         <div class="heading-line color-white big"></div>
-                                        <h3><strong>접수 마감</strong></h3>
-                                        <h1 class="hidden-xs font-width:500"><!--12월 23일 23:59-->마감되었습니다.</h1>
-                                        <h2 class="visible-xs font-width:500"><!--12월 23일 23:59-->마감되었습니다.</h2>
+                                        <h3><strong>접수 기간</strong></h3>
+                                        <h1 class="hidden-xs font-width:500">10월 27일 23:59까지</h1>
+                                        <h2 class="visible-xs font-width:500">10월 27일 23:59까지</h2>
                                     </div>
                                 </div>
                             </div>
@@ -144,8 +142,8 @@
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
                         <div class="row">
-                             <div class="col-xs-6"> <a href=""><button type="button" class="btn btn-punch btn-primary btn-lg btn-darker btn-block" data-toggle="modal" data-target="#modalSubmit">마감되었습니다.</button></a></div>
-                                <div class="col-xs-6"> <a href="https://www.acmicpc.net/category/408" <button type="button" class="btn btn-punch btn-lg btn-success btn-darker btn-block"">기출문제</button></a></div>                     
+                            <div class="col-xs-6"> <a href="https://forms.gle/hnYYwenug45Ry4p69" target="_blank"><button type="button" class="btn btn-punch btn-primary btn-lg btn-darker btn-block" data-toggle="modal" data-target="#modalSubmit">참가 신청하기</button></a></div>
+                            <div class="col-xs-6"> <a href="https://www.acmicpc.net/category/408" target="_blank"><button type="button" class="btn btn-punch btn-lg btn-success btn-darker btn-block"">기출문제</button></a></div>                     
                         </div>
                         <div class="space"></div>
                         <div class="space"></div>
@@ -155,7 +153,7 @@
                             <strong>Ajou Programming Contest</strong>는 논리적인 사고로 문제를 해결하는 아주대학교 교내 프로그래밍 경시대회입니다.
                             <br>전공 학생들에게는 실력을 검증하고 성장할 수 있는 기회가, 비전공 학생들에게는 보다 흥미롭게 SW의 가치를 경험하는 기회가 될 것입니다.
                             <br>정보통신대학 소속 학생들은 <strong>Division1</strong>에만 참여가능하고, 비소속 학생들은 <strong>제약 없이</strong> 참여 가능합니다.
-                            <br>Division1, Division2 는 서로 다른 난이도로 진행되며 순위 및 수상 역시 따로 이루어집니다.
+                            <br>Division1, Division2 는 순위 및 수상이 따로 이루어집니다.
 
                         </p>
                         <h3>시상 내역</h3>
@@ -213,12 +211,12 @@
                                         <tr>
                                             <td>13:30 ~ 14:00</td>
                                             <td>이동 및 환경점검</td>
-					    <td>온라인</td>
+					                        <td>온라인</td>
                                         </tr>
                                         <tr>
-                                            <td>14:00 ~ 18:00</td>
-                                            <td>본대회</td>
-                                            <td>온라인</td>
+                                            <td><strong>14:00 ~ 18:00</strong></td>
+                                            <td><strong>본대회</strong></td>
+                                            <td><strong>온라인</strong></td>
                                         </tr>
                                         <tr>
                                             <td>18:00 ~ 19:00</td>
@@ -240,7 +238,7 @@
                         <div class="row">
                             <div class="col-md-10 col-md-offset-1">
                                 <h3>대회 참가 자격</h3>
-                                    <h5><strong>2020 APC</strong> 당일 아주대학교 학생(재학생 / 휴학생) 중 아래 자격을 만족하는 누구나</h5>
+                                    <h5><strong>2021 APC</strong> 당일 아주대학교 학생재학생 중 아래 자격을 만족하는 누구나</h5>
                                 <ul>
                                     <li>역대 한국 대학생 프로그래밍 경시대회 수상자가 아닌 자</li>
                                     <li>역대 shake! 3위 이상 수상자가 아닌 자</li>
@@ -251,6 +249,8 @@
                                 <ul>
                                     <li>
                                         <strong>APC</strong>는 1인 1팀의 개인전 형태로 치러집니다.</li>
+                                    <li>
+                                        <strong>본 대회는 온라인으로 진행되며, 참가자 전원은 대회 시간동안 zoom 어플리케이션을 통해 본인의 모습을 생중계 해야 합니다.</strong></li>
                                     <li>
                                         대회에 사용할 컴퓨터는 개인 지참해야 하며, 1인당 1대의 컴퓨터만 허용합니다.</li>
                                     <li>
