--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     <!-- Favicons -->
 
     <meta property="og:image" content="https://shake.codes/static/img/2020_og.jpg"/>
-    <meta property="og:title" content="2020 경인지역 6개대학 연합 프로그래밍 경시대회 shake!"/>
+    <meta property="og:title" content="2021 경인지역 6개대학 연합 프로그래밍 경시대회 shake!"/>
     <meta property="og:url" content="https://shake.codes"/>
-    <meta property="og:site_name" content="shake! 2020"/>
+    <meta property="og:site_name" content="shake! 2021"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:description" content="아주대학교, 경희대학교, 성균관대학교, 인하대학교, 한국항공대학교, 한양대학교 ERICA의 학교 대표들이 모여 함께하는 교류의 장, 2020 shake!"/>
+    <meta property="og:description" content="아주대학교, 경희대학교, 성균관대학교, 인하대학교, 한국항공대학교, 한양대학교 ERICA의 학교 대표들이 모여 함께하는 교류의 장, 2021 shake!"/>
 
 </head>
 
@@ -95,7 +95,7 @@
                                 </li>
                                 <li><a href="#rule">기준 및 규정</a>
                                 </li>
-                                <li><a href="/results/2019">결과 보기</a>
+                                <li><a href="./results/2020/index.html">결과 보기</a>
                                 </li>
                             </ul>
                         </div>
@@ -127,7 +127,7 @@
                             <p>
 <!--                                 <a class="btn btn-punch btn-white hover-primary hover-colors btn-md" href="#apply" role="button">본선일정 안내</a>  -->
                                 <a class="btn btn-punch btn-white hover-primary hover-colors btn-md" href="#about" role="button">대회 정보</a>
-                                <a class="btn btn-punch btn-primary btn-md btn-darker" href="/results/2019" role="button">2019 결과</a>
+                                <a class="btn btn-punch btn-primary btn-md btn-darker" href="./results/2020/index.html" role="button">2020 결과</a>
                             </p>
                         </div>
                     </div>
@@ -264,7 +264,7 @@
                             <h2 class="lighter"><strong>대회 참가</strong> 안내</h2>
                             <p>
                                 <strong>shake!</strong>는 각 학교 선발전을 통해 선발된 학교대표학생들만 참가할 수 있습니다.
-                                2020 경인지역 6개대학 연합 프로그래밍 경시대회 <strong>shake!</strong>의 <strong>학교대표 선발전</strong> 일정은 아래와 같습니다.
+                                2021 경인지역 6개대학 연합 프로그래밍 경시대회 <strong>shake!</strong>의 <strong>학교대표 선발전</strong> 일정은 아래와 같습니다.
                                 <br><strong>문의사항</strong>은 각 학교별 주관처를 통해주시기 바랍니다.
                             </p>
                         </div>
@@ -287,21 +287,21 @@
 
                             <div class="tab-content">
                                 <div role="tabpanel" class="tab-pane active" id="pre_ajou">
-                                    <p><strong>아주대학교</strong>는 <strong>2020 아주대학교 프로그래밍 경시대회</strong>를
+                                    <p><strong>아주대학교</strong>는 <strong>2021 아주대학교 프로그래밍 경시대회</strong>를
                                         <br> 자체 선발전으로 진행, 10명의 학교대표를 선발합니다.
                                         <br>
-                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2020. 12. 26. 토요일</strong>
+                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2021. 10. 30</strong>
                                         <br> <strong>선발전 주관처:</strong>&nbsp;&nbsp;알고리즘 소학회 A.N.S.I.
-                                        <br> <strong>주관 대표:</strong>&nbsp;&nbsp;정세훈 010-9568-9590</p>
+                                        <br> <strong>주관 대표:</strong>&nbsp;&nbsp;정의찬 010-3386-5791</p>
                                     <a href="/apc" title="" class="btn btn-punch btn-info btn-link" target="_blank">아주대학교 선발전 바로가기</a>
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="pre_khee">
                                     <p><strong>경희대학교</strong>는 <strong>2020 경희대학교 가을 프로그래밍 경시대회</strong>를
                                         <br> 자체 선발전으로 진행, 10명의 학교대표를 선발합니다.
                                         <br>
-                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2020. 10. 10. 토요일</strong>
+                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2021. 10. 09</strong>
                                         <br> <strong>선발전 주관처:</strong>&nbsp;&nbsp;컴퓨터공학과 학생회
-                                        <br> <strong>주관 대표:</strong>&nbsp;&nbsp;정병기 010-5131-9470</p>
+                                        <br> <strong>주관 대표:</strong>&nbsp;&nbsp; </p>
                                     <a href="http://swedu.khu.ac.kr/board5/bbs/board.php?bo_table=06_01&wr_id=1218" title="" class="btn btn-punch btn-info btn-link" target="_blank">대회가 종료되었습니다</a>
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="pre_skku">
@@ -351,19 +351,20 @@
                             <div class="pb-header info-background dark"><h4 class="text-white"><strong>shake! 본선 정보</strong></h4></div>
                             <div class="pb-content info-background dark clearfix">
                                 <strong>일시</strong><br>
-                                2021년 1월 23일 토요일<br>
+                                2022년 1월 중순 (추후 공지)<br>
                                 <br>
                                 <strong>장소</strong><br>
                                 온라인<br>
                                 <br>
                                 <strong>상품</strong><br>
-                                1등 : 아주대학교 총장상 및 <strong>상금 100만원</strong><br>
+                                미정
+                                <!-- 1등 : 아주대학교 총장상 및 <strong>상금 100만원</strong><br>
                                 2등 : 아주대학교 총장상 및 <strong>상금 70만원</strong><br>
                                 3등 : 아주대학교 총장상 및 <strong>상금 50만원</strong><br>
                                 4-5등 : 아주대학교 사업단장상 및 <strong>상금 30만원</strong><br>
                                 후원사 특별상 및 <strong>상금 20만원</strong><br>
-                                외 추첨상 증정<br>
-                                <strong>본선 참가자 전원 스타벅스 기프티콘 제공</strong>
+                                외 추첨상 증정<br> -->
+                                
                                 <br>
                             </div>
                         </div>
@@ -390,12 +391,14 @@
                             <div class="row" style="margin-left:2%">
                                 <div class="col-md-6">
                                     <h3 class="lighter">shake! 본선 기출</h3>
+                                    <a href="https://www.acmicpc.net/category/detail/2399"><button type="button" class="btn btn-danger btn-preprob"><strong>20 본선 문제</strong></button></a>
                                     <a href="https://www.acmicpc.net/category/detail/2041"><button type="button" class="btn btn-danger btn-preprob"><strong>19 본선 문제</strong></button></a>
                                     <a href="https://www.acmicpc.net/category/detail/1890"><button type="button" class="btn btn-danger btn-preprob"><strong>18 본선 문제</strong></button></a>
                                     <a href="https://www.acmicpc.net/category/detail/1817"><button type="button" class="btn btn-danger btn-preprob"><strong>17 본선 문제</strong></button></a>
                                     <a href="https://lavida.us/collection.php?col_id=4272"><button type="button" class="btn btn-danger btn-preprob"><strong>16 본선 문제</strong></button></a>
                                     <a href="https://lavida.us/collection.php?col_id=4269"><button type="button" class="btn btn-danger btn-preprob"><strong>15 본선 문제</strong></button></a>
                                     <br>
+                                    <a href="https://drive.google.com/file/d/1MA4W5Jic9goqLtH6fjn0ymgNF8GydA_O/view?usp=sharing"><button type="button" class="btn btn-outline-danger btn-preprob"><strong>20 본선 풀이</strong></button></a>
                                     <a href="https://drive.google.com/file/d/1mQoEx-oJPZu4Yg9buMWV4pHCBUvwtHsi/view?usp=sharing"><button type="button" class="btn btn-outline-danger btn-preprob"><strong>19 본선 풀이</strong></button></a>
                                     <a href="https://drive.google.com/open?id=1YVe7fMOU2owT6GJmf9nJCnN8QqfQ5rEW"><button type="button" class="btn btn-outline-danger btn-preprob"><strong>18 본선 풀이</strong></button></a>
                                     <a href="https://goo.gl/dZgNyv"><button type="button" class="btn btn-outline-danger btn-preprob"><strong>17 본선 풀이</strong></button></a>
@@ -438,7 +441,7 @@
                                 </p>
                                 <ul>
                                     <li>각 학교 선발전을 통해 정당하게 선출된 자</li>
-                                    <li>2020-1, 2학기 기준 해당학교 1학기 이상 재학한 자</li>
+                                    <li>2021년 1, 2학기 기준 해당 학교 1학기 이상 재학한 자</li>
                                     <li>역대 <strong>한국 프로그래밍 경시대회</strong> 수상자가 아닌 자</li>
                                     <li>역대 <strong>shake!</strong> 3위 이내 수상자가 아닌 자</li>
                                     <li>+ 자체 선발전을 진행하는 학교에 한하여 출제진 중 최대 1명의 추가대표</li>
@@ -634,7 +637,7 @@
                             developed by <a href="mailto:waps12b@naver.com">waps12b</a><br>
                             designed by <a href="http://gar.am">garam</a><br>
 -->
-                            © shake! 2015-2020
+                            © shake! 2015-2021
                         </p>
                     </div>
                     <!--/.col-->
