update apc,shake page

--- a/apc/index.html
+++ b/apc/index.html
@@ -250,7 +250,7 @@
                                     <li>
                                         <strong>APC</strong>는 1인 1팀의 개인전 형태로 치러집니다.</li>
                                     <li>
-                                        <strong>본 대회는 온라인으로 진행되며, 참가자 전원은 대회 시간동안 zoom 어플리케이션을 통해 본인의 모습을 생중계 해야 합니다.</strong></li>
+                                        <strong>본 대회는 온라인으로 진행되며, 참가자 전원은 대회 시간동안 zoom 어플리케이션을 통해 본인의 모습을 생중계 해야 합니다.</strong><a href="https://drive.google.com/file/d/1aoWj-KhGFc1uaghuiDzoojZ8omad6Imo/view?usp=sharing"> zoom을 이용한 참가 가이드</a></li>
                                     <li>
                                         대회에 사용할 컴퓨터는 개인 지참해야 하며, 1인당 1대의 컴퓨터만 허용합니다.</li>
                                     <li>
