--- a/index.html
+++ b/index.html
@@ -296,49 +296,53 @@
                                     <a href="/apc" title="" class="btn btn-punch btn-info btn-link" target="_blank">아주대학교 선발전 바로가기</a>
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="pre_khee">
-                                    <p><strong>경희대학교</strong>는 <strong>2020 경희대학교 가을 프로그래밍 경시대회</strong>를
+                                    <p>추후 공지</p>
+                                    <!-- <p><strong>경희대학교</strong>는 <strong>2020 경희대학교 가을 프로그래밍 경시대회</strong>를
                                         <br> 자체 선발전으로 진행, 10명의 학교대표를 선발합니다.
                                         <br>
                                         <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2021. 10. 09</strong>
                                         <br> <strong>선발전 주관처:</strong>&nbsp;&nbsp;컴퓨터공학과 학생회
                                         <br> <strong>주관 대표:</strong>&nbsp;&nbsp; </p>
-                                    <a href="http://swedu.khu.ac.kr/board5/bbs/board.php?bo_table=06_01&wr_id=1218" title="" class="btn btn-punch btn-info btn-link" target="_blank">대회가 종료되었습니다</a>
+                                    <a href="http://swedu.khu.ac.kr/board5/bbs/board.php?bo_table=06_01&wr_id=1218" title="" class="btn btn-punch btn-info btn-link" target="_blank">대회가 종료되었습니다</a> -->
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="pre_skku">
-                                    <p><strong>성균관대학교</strong>는 <strong>2020 shake! 예선</strong>을 통해 10명의 학교대표를 선발합니다.
+                                    <p>추후 공지</p>
+                                    <!-- <p><strong>성균관대학교</strong>는 <strong>2020 shake! 예선</strong>을 통해 10명의 학교대표를 선발합니다.
                                         <br>
                                         <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2020. 12. 26. 토요일</strong>
                                         <br> <strong>선발전 주관처:</strong>&nbsp;&nbsp;알고리즘 동아리 NPC
                                         <br> <strong>주관 대표:</strong>&nbsp;&nbsp;이동욱 010-8843-3116</p>
-                                    <a href="" title="" class="btn btn-punch btn-info btn-link" target="_blank">대회 신청이 마감되었습니다.</a>
+                                    <a href="" title="" class="btn btn-punch btn-info btn-link" target="_blank">대회 신청이 마감되었습니다.</a> -->
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="pre_inha">
-                                    <p><strong>인하대학교</strong>는 <strong>2020 인하대학교 프로그래밍 경시대회</strong>를
+                                    <p>추후 공지</p>
+                                    <!-- <p><strong>인하대학교</strong>는 <strong>2020 인하대학교 프로그래밍 경시대회</strong>를
                                         <br> 자체 선발전으로 진행, 9명의 학교대표를 선발합니다.
                                         <br> 2명의 선발전 출제진이 추가 학교대표로 선발됩니다.
                                         <br>
                                         <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2021. 01. 09. 토요일</strong>
                                         <br> <strong>선발전 주관처:</strong>&nbsp;&nbsp;인하대학교 컴퓨터공학 학술소모임 CTP
                                         <br> <strong>주관 대표:</strong>&nbsp;&nbsp;김동우 010-2779-7341</p>
-                                    <a href="https://forms.gle/ocgc83HFGwSo3Z126" title="" class="btn btn-punch btn-info btn-link" target="_blank">인하대학교 선발전 바로가기</a>
+                                    <a href="https://forms.gle/ocgc83HFGwSo3Z126" title="" class="btn btn-punch btn-info btn-link" target="_blank">인하대학교 선발전 바로가기</a> -->
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="pre_hyer">
-                                    <p><strong>한양대학교 ERICA</strong>는 <strong>2020 한양대학교 에리카 프로그래밍 경시대회</strong>를
+                                    <p>추후 공지</p>
+                                    <!-- <p><strong>한양대학교 ERICA</strong>는 <strong>2020 한양대학교 에리카 프로그래밍 경시대회</strong>를
                                         <br> 자체 선발전으로 진행, 9명의 학교대표를 선발합니다.
                                         <br> 1명의 선발전 출제진이 추가 학교대표로 선발됩니다.
                                         <br>
                                         <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2020. 12. 26. 토요일</strong>
                                         <br> <strong>선발전 주관처:</strong>&nbsp;&nbsp;한양대학교 ERICA HEPC 운영위원회
                                         <br> <strong>주관 대표:</strong>&nbsp;&nbsp;윤병서 010-4532-2751</p>
-                                    <a href="https://forms.gle/mLemgAgpaDoMqM456" title="" class="btn btn-punch btn-info btn-link" target="_blank">한양대학교 선발전 바로가기</a>
+                                    <a href="https://forms.gle/mLemgAgpaDoMqM456" title="" class="btn btn-punch btn-info btn-link" target="_blank">한양대학교 선발전 바로가기</a> -->
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="pre_krar">
-                                    <p><strong>한국항공대학교</strong>는 <strong>2020 shake! 예선</strong>을 통해 10명의 학교대표를 선발합니다.
+                                    <p><strong>한국항공대학교</strong>는 <strong>2021 제 1회 한국항공대학교 프로그래밍 경시대회</strong>을 통해 10명의 학교대표를 선발합니다.
                                         <br>
-                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2020. 12. 26. 토요일</strong>
-                                        <br> <strong>선발전 주관처:</strong>&nbsp;&nbsp;소프트웨어학과 학생회
-                                        <br> <strong>주관 대표:</strong>&nbsp;&nbsp;이덕희 010-8819-8401</p>
-                                    <a href="" title="" class="btn btn-punch btn-info btn-link" target="_blank">대회 신청이 마감되었습니다.</a>
+                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2021. 10. 30</strong>
+                                        <br> <strong>선발전 주관처:</strong>&nbsp;&nbsp;항공대학교 소프트웨어학과, 알고리즘 학회 koala
+                                        <br> <strong>주관 대표:</strong>&nbsp;&nbsp;천수환 010-7237-7616</p>
+                                    <!-- <a href="" title="" class="btn btn-punch btn-info btn-link" target="_blank">대회 신청이 마감되었습니다.</a> -->
                                 </div>
                             </div>
                         </div> 
