update apc page

--- a/apc/index.html
+++ b/apc/index.html
@@ -158,17 +158,18 @@
                         </p>
                         <h3>시상 내역</h3>
                         <p class="big-text">
-                            <strong>APC</strong> 참가자 중 수상을 하지 못한 학생들에게 추첨을 통해 1만원 상당의 상품을 증정합니다. (총 30명)
+                            <strong>APC</strong> 참가자 중 수상을 하지 못한 학생들에게 추첨을 통해 1만원 상당의 상품을 증정합니다. (총 10명)
                             <br> 외의 우수성적자 시상에 관해서는 아래를 참고해주세요.
+                            <h6>* 시상 내역은 학과 사정에 따라 변경될 수 있습니다. </h6>
                         </p>
                         <div class="row">
                             <div class="col-sm-6">
                                 <h4>Division1 - Competition Round</h4>
                                 <ul>
                                     <li>대상: 총장상 및 상금 50만원(1명)</li>
-                                    <li>최우수상: 사업단장상 및 상금 30만원(1명)</li>
-                                    <li>우수상: 사업단장상 및 상금 20만원(2명)</li>
-                                    <li>장려상: 사업단장상 및 상금 10만원(3명)</li>
+                                    <li>최우수상: LINC+ 사업단장상 및 상금 30만원(1명)</li>
+                                    <li>우수상: 창의산학교육원장상 및 상금 20만원(2명)</li>
+                                    <li>장려상: 창의산학교육원장상 및 상금 10만원(3명)</li>
                                     <p>
                                         상위 입상자에게 경인지역 6개대학 연합 프로그래밍 경시대회 <a href="http://shake.codes"><strong>shake!</strong></a> 참가 자격 부여
                                     </p>
@@ -178,8 +179,8 @@
                                 <h4>Division2 - Challenge Round</h4>
                                 <ul>
                                     <li>대상: 총장상 및 상금 30만원(1명)</li>
-                                    <li>최우수상: 사업단장상 및 상금 20만원(1명)</li>
-                                    <li>우수상: 사업단장상 및 상금 10만원(3명)</li>
+                                    <li>최우수상: LINC+ 사업단장상 및 상금 20만원(1명)</li>
+                                    <li>우수상: 창의산학교육원장상 및 상금 10만원(3명)</li>
                                     <p> 정보통신대학 소속 학생은 <strong>Division2</strong> 참가 불가</p>
                                 </ul>
                             </div>
@@ -250,7 +251,7 @@
                                     <li>
                                         <strong>APC</strong>는 1인 1팀의 개인전 형태로 치러집니다.</li>
                                     <li>
-                                        <strong>본 대회는 온라인으로 진행되며, 참가자 전원은 대회 시간동안 zoom 어플리케이션을 통해 본인의 모습을 생중계 해야 합니다.</strong><a href="https://drive.google.com/file/d/1aoWj-KhGFc1uaghuiDzoojZ8omad6Imo/view?usp=sharing"> zoom을 이용한 참가 가이드</a></li>
+                                        <strong>본 대회는 온라인으로 진행되며, 참가자 전원은 대회 시간동안 zoom 어플리케이션을 통해 본인의 모습을 생중계 해야 합니다.</strong><a href="https://drive.google.com/file/d/1aoWj-KhGFc1uaghuiDzoojZ8omad6Imo/view?usp=sharing"> (zoom을 이용한 참가 가이드)</a></li>
                                     <li>
                                         대회에 사용할 컴퓨터는 개인 지참해야 하며, 1인당 1대의 컴퓨터만 허용합니다.</li>
                                     <li>
