Add APC2021 OG Image

--- a/apc/index.html
+++ b/apc/index.html
@@ -60,7 +60,7 @@
 
     <!-- Favicons -->
 
-    <meta property="og:image" content="../static/img/2021_APC_배너.jpeg" />
+    <meta property="og:image" content="../static/img/apc2021_og.png" />
     <meta property="og:title" content="제 11회 아주대학교 프로그래밍 경시대회가 열립니다!" />
     <meta property="og:url" content="/apc" />
     <meta property="og:site_name" content="APC 2021" />
