[update]2021_apply_due

--- a/apc/index.html
+++ b/apc/index.html
@@ -110,7 +110,7 @@
 
                                 <h1>2021 아주대학교 프로그래밍 경시대회</h1>
                                 <h4>
-                                    <br>대회 참가 신청 접수 중 입니다.
+                                    <br>대회 참가 신청이 종료되었습니다.
                                     <br>관련 문의는 정의찬 (010-3386-5791)으로 부탁드립니다.
                                 </h4>
                                 <div class="space"></div>
@@ -142,7 +142,7 @@
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
                         <div class="row">
-                            <div class="col-xs-6"> <a href="https://forms.gle/hnYYwenug45Ry4p69" target="_blank"><button type="button" class="btn btn-punch btn-primary btn-lg btn-darker btn-block" data-toggle="modal" data-target="#modalSubmit">참가 신청하기</button></a></div>
+                            <div class="col-xs-6"> <a href="https://forms.gle/hnYYwenug45Ry4p69" target="_blank"><button type="button" class="btn btn-punch btn-primary btn-lg btn-darker btn-block" data-toggle="modal" data-target="#modalSubmit">참가 신청 종료</button></a></div>
                             <div class="col-xs-6"> <a href="https://www.acmicpc.net/category/408" target="_blank"><button type="button" class="btn btn-punch btn-lg btn-success btn-darker btn-block"">기출문제</button></a></div>                     
                         </div>
                         <div class="space"></div>
