--- a/apc/index.html
+++ b/apc/index.html
@@ -111,6 +111,7 @@
                                 <h1>2021 아주대학교 프로그래밍 경시대회</h1>
                                 <h4>
                                     <br>대회 참가 신청이 종료되었습니다.
+                                    <br>참가자 계정 정보가 발송되었습니다. 이메일을 확인해주시기 바랍니다.
                                     <br>관련 문의는 정의찬 (010-3386-5791)으로 부탁드립니다.
                                 </h4>
                                 <div class="space"></div>
