--- a/apc/index.html
+++ b/apc/index.html
@@ -88,8 +88,9 @@
                     <div class="col-md-7 menu-col text-right">
                         <div class="menu">
                             <ul class="list-inline">
-                                <li><a href="https://www.acmicpc.net/contest/scoreboard/568">2020 Div.1 결과 보기</a></li>
-				                <li><a href="https://www.acmicpc.net/contest/scoreboard/567">2020 Div.2 결과 보기</a></li>
+                                <li><a href="https://www.acmicpc.net/contest/scoreboard/703">2021 Div.1 결과 보기</a></li>
+				                <li><a href="https://www.acmicpc.net/contest/scoreboard/704">2021 Div.2 결과 보기</a></li>
+                                <li><a href="https://drive.google.com/file/d/1gqSMhkn8oWVpynU9jH-sEclCMPQg2tp5/view?usp=sharing">풀이 슬라이드</a></li>
                             </ul>
                         </div>
                     </div>
@@ -110,9 +111,7 @@
 
                                 <h1>2021 아주대학교 프로그래밍 경시대회</h1>
                                 <h4>
-                                    <br>대회 참가 신청이 종료되었습니다.
-                                    <br>참가자 계정 정보가 발송되었습니다. 이메일을 확인해주시기 바랍니다.
-                                    <br>관련 문의는 정의찬 (010-3386-5791)으로 부탁드립니다.
+                                    <br>대회가 종료되었습니다.
                                 </h4>
                                 <div class="space"></div>
                                 <div class="row">
