--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
                                         <br> 자체 선발전으로 진행, 10명의 학교대표를 선발합니다.
                                         <br>
                                         <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2021. 05. 15</strong>
-                                        <br> <strong>선발전 주관처:</strong>&nbsp;&nbsp;경의대학교 SW 중심대학
-                                        <br> <strong>주관 대표: 박민재 010-2351-7847</strong>&nbsp;&nbsp; </p>
+                                        <br> <strong>선발전 주관처:</strong>&nbsp;&nbsp;경희대학교 SW 중심대학 사업단
+                                        <br> <strong>주관 대표:</strong> 박민재 010-2351-7847&nbsp;&nbsp; </p>
                                     <!-- <a href="http://swedu.khu.ac.kr/board5/bbs/board.php?bo_table=06_01&wr_id=1218" title="" class="btn btn-punch btn-info btn-link" target="_blank">대회가 종료되었습니다</a> -->
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="pre_skku">
@@ -345,26 +345,19 @@
                     </div>
                     <div class="col-md-1"></div>
                     <!-- /.col -->
-                    <div class="col-md-4">
+                    <div class="col-md-5">
                         <div class="promo-block shadow-5">
                             <div class="pb-header info-background dark"><h4 class="text-white"><strong>shake! 본선 정보</strong></h4></div>
                             <div class="pb-content info-background dark clearfix">
-                                <strong>일시</strong><br>
-                                2022년 1월 중순 (추후 공지)<br>
-                                <br>
-                                <strong>장소</strong><br>
-                                온라인<br>
-                                <br>
-                                <strong>상품</strong><br>
-                                미정
-                                <!-- 1등 : 아주대학교 총장상 및 <strong>상금 100만원</strong><br>
-                                2등 : 아주대학교 총장상 및 <strong>상금 70만원</strong><br>
-                                3등 : 아주대학교 총장상 및 <strong>상금 50만원</strong><br>
-                                4-5등 : 아주대학교 사업단장상 및 <strong>상금 30만원</strong><br>
-                                후원사 특별상 및 <strong>상금 20만원</strong><br>
-                                외 추첨상 증정<br> -->
-                                
-                                <br>
+                                <h4><strong>일시</strong></h4>
+                                2022년 1월 15일 토요일<br>
+                                <h4><strong>장소</strong></h4>
+                                온라인 (zoom)<br>
+                                <h4><strong>시상</strong></h4>
+                                1위 : 아주대학교 총장상 및 <strong>상금 100만원</strong><br>
+                                2위~3위 : 아주대학교 LINC+ 사업단장상 및 <strong>상금 70만원</strong><br>
+                                4위~6위 : 아주대학교 창의산학교육원장상 및 <strong>상금 50만원</strong><br>
+                                7위~10위 : 장려상 (후원사 특별상) <strong>상금 30만원</strong><br>
                             </div>
                         </div>
                     </div>
@@ -595,7 +588,6 @@
                             <div class="col-md-10">
                                 <h5 class="uppercase-text"><strong>주최</strong></h5>
                                 <a href="http://linc.ajou.ac.kr" target="_blank"> <img src="./static/img/company-linc.gif" style="width:200px; height:auto;" class="company"> </a>
-                                <a target="_blank"> <img src="./static/img/company-sw.png" style="width:200px; height:auto;" class="company"> </a>
                             </div>
                             <div class="col-md-2"></div>
                         </div>
@@ -604,7 +596,7 @@
                     <div class="col-md-4">
                         <h5 class="uppercase-text"><strong>주관</strong></h5>
                         <p>아주대학교 알고리즘 소학회 <strong>A.N.S.I.</strong>
-                        <br>경희대학교 SW중심대학
+                        <br>경희대학교 SW중심대학 사업단
                         <br>성균관대학교 알고리즘 동아리 <strong>NPC</strong>
                         <br>인하대학교 컴퓨터공학 학술소모임 <strong>CTP</strong>
                         <br>한국항공대학교 알고리즘 학회 <strong>koala</strong>
@@ -614,6 +606,11 @@
                     <!--/.col-->
                     <div class="col-md-3">
                         <h5 class="uppercase-text"><strong>후원</strong></h5>
+                        <a href="https://www.modusign.co.kr/" target="_blank"><img src="./static/img/MODUSIGN.jpg" class="company" style = "width:80px; height : auto;" > </a><br><br>
+                        <a href="https://modulabs.co.kr/" target="_blank"><img src="./static/img/MODULAB.png" class="company" style = "width:80px; height : auto;"> </a><br>
+                        <a href="https://www.kitronyx.co.kr/" target="_blank"><img src="./static/img/Kitronyx.jpg" class="company" style = "width:120px; height : auto;"> </a><br>
+                        <a href="https://www.meissa.ai/ko/" target="_blank"><img src="./static/img/Meissa_Logo.jpg" class="company"> </a>
+                        <a href="https://d2.naver.com/home" target="_blank"><img src="./static/img/NAVER D2 LOGO.png" class="company"> </a>
                         <a href="https://startlink.io/" target="_blank"><img src="./static/img/company-startlink.png" class="company"> </a>
                     </div>
                     <!--/.col-->
