--- a/index.html
+++ b/index.html
@@ -433,10 +433,10 @@
                                 </p>
                                 <ul>
                                     <li>각 학교 선발전을 통해 정당하게 선출된 자</li>
-                                    <li>2021년 1, 2학기 기준 해당 학교 1학기 이상 재학한 자</li>
+                                    <li>2022년 1, 2학기 기준 해당 학교 1학기 이상 재학한 자</li>
                                     <li>역대 <strong>한국 프로그래밍 경시대회</strong> 수상자가 아닌 자</li>
                                     <li>역대 <strong>shake!</strong> 3위 이내 수상자가 아닌 자</li>
-                                    <li>+ 자체 선발전을 진행하는 학교에 한하여 출제진 중 최대 1명의 추가대표</li>
+                                    <li>+ 자체 선발전을 진행하는 학교에 한하여 자체 선발전 출제진 중 최대 1명의 추가대표</li>
                                 </ul>
                                 <h3>대회 진행 방식</h3>
                                 <ul>
